// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`callback events 1`] = `
<div class="van-popup van-popup--bottom van-action-sheet" name="van-popup-slide-bottom">
  <div class="van-action-sheet__item van-hairline--top"><span class="van-action-sheet__name">Option</span></div>
  <div class="van-action-sheet__item van-action-sheet__item--disabled van-hairline--top"><span class="van-action-sheet__name">Option</span></div>
  <div class="van-action-sheet__cancel">Cancel</div>
</div>
`;

exports[`disable lazy-render 1`] = `
<div class="van-popup van-popup--bottom van-action-sheet" style="display: none;" name="van-popup-slide-bottom">
  <div class="van-action-sheet__item van-hairline--top"><span class="van-action-sheet__name">Option</span></div>
  <div class="van-action-sheet__item van-hairline--top"><span class="van-action-sheet__name">Option</span></div>
  <div class="van-action-sheet__cancel">Cancel</div>
</div>
`;
